--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,63 @@
-.App {
+
+.pq{
+  position: absolute;
+  bottom: 70px;
   text-align: center;
+  right: 70px;
+  width: 550px;
+  height: 250px;
+  border: 2px solid black;
+  border-radius: 30px;
+  background-color: chartreuse;
+}
+.heading{
+  text-align: center;
+  text-shadow: 2px 2px 2px yellowgreen;
+}
+.qp{
+  position: absolute;
+  text-align: center;
+  bottom: 70px;
+  left: 70px;
+  width: 550px;
+  height: 250px;
+  border: 2px solid black;
+  border-radius: 30px;
+  background-color: orangered;
+}
+.sm{
+  width: 400px;
+  height: 50px;
+  margin-left: 200px;
+  background-color: rgb(37, 197, 176);
+  border: 2px solid black;
+  border-radius: 30px;
+  text-align: center;
+  cursor: pointer;
+  
+ 
+}
+.sm:hover{
+  background-color: aqua;
+}
+.ms{
+  width: 400px;
+  height: 50px;
+  margin-left: 50px;
+  background-color: rgb(37, 197, 176);
+  border: 2px solid black;
+  border-radius: 30px;
+  text-align: center;
+  cursor: pointer;
+ 
+ 
+}
+.ms:hover{
+  background-color: aqua;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
